hphp/test/zend/good/ext/standard/tests/math/hexdec_error.php.expectf
*** Testing hexdec() :  error conditions ***

-- Incorrect number of arguments --

Warning: hexdec() expects exactly 1 parameter, 0 given in %s/hexdec_error.php on line 15

Warning: hexdec() expects exactly 1 parameter, 2 given in %s/hexdec_error.php on line 16

-- Incorrect input --

Catchable fatal error: Object of class classA could not be converted to string in %s/hexdec_error.php on line 19
